--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,9 @@
       <div class="img"><img src="/static/img/beng-portfolio.png" width="100%"></div>
       <div class="content">
         {{ cn_bio }}<br /><br />{{ en_bio }}
+        <div class="pdf">
+          <a href="/static/pdf/bengilla-bios-2021.pdf" download="Bengilla_Bio_2021">Download PDF</a>
+        </div>
       </div>
     </section>
 
