--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 <!-- Main Page -->
     <section id="main" class="main">
       <div class="main-page">
+        {{ test }}
         <div class="en-title title-main">Bengilla.com</div>
         <a href="#contact" class="deg-font en-title en-contact"><div>co &nbsp;&nbsp;tact</div></a>
         <a href="#about" class="deg-font en-title en-about"><div>bout</div></a>
