--- a/static/style.css
+++ b/static/style.css
@@ -217,9 +217,9 @@ hr {
 
 /* Section 2 - About */
 .about {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 100px 40% 60%;
+  grid-template-rows: 100px 20% 60%; */
   padding: 50px 0 50px 0;
   min-height: 100vh;
   /* border: 2px solid green; */
@@ -227,7 +227,7 @@ hr {
 
 .title-about {
   width: 80%;
-  margin: auto;
+  margin: 10px auto;
   font-size: 4em;
   grid-column: 1;
   grid-row: 1;
@@ -235,16 +235,11 @@ hr {
 }
 
 .img {
-  grid-column: 1;
-  grid-row: 2;
+  /* grid-column: 1;
+  grid-row: 2; */
   width: 70%;
-  /* box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.6); */
-}
-
-.empty {
-  grid-column: 2;
-  grid-row: 2;
-  width: 30%;
+  height: 100%;
+  box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.6);
 }
 
 .pdf {
