--- a/static/style.css
+++ b/static/style.css
@@ -367,15 +367,15 @@ form textarea {
 }
 
 @media (max-width: 480px) {
-  .main-page {width: 400px; height: 400px;}
+  .main-page {width: 100%; height: 100%;}
   .en-title {font-size: 3em;}
-  .en-contact {top: 49%; left: -19%;}
-  .en-about {top: 48.8%; left: 7.5%;}
-  .en-perform {top: 26%; left: 26%;}
+  .en-contact {top: 49.5%; left: -21%;}
+  .en-about {top: 49.5%; left: 7.5%;}
+  .en-perform {top: 38%; left: 26%;}
   .cn {font-size: 3em;}
-  .cn-contact {top: 25%; left: 14%;opacity: 0.1; color: black;}
-  .cn-about {top: 28%; left: 25%; opacity: 0.1; color: black;}
-  .cn-perform {top: 48%; left: 29%; opacity: 0.1; color: black;}
+  .cn-contact {top: 37%; left: 11%;opacity: 0.1; color: black;}
+  .cn-about {top: 39%; left: 26%; opacity: 0.1; color: black;}
+  .cn-perform {top: 48%; left: 31%; opacity: 0.1; color: black;}
 
   .title-perform, .title-about, .title-contact {font-size: 2em;}
   .title-perform {width:100%;}
