--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico" />
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
+    <div id="preloader"></div>
     <div class="container">
       {% block content %}
       {% endblock %}
     </div>
+    <script>
+      var loader = document.getElementById("preloader");
+      window.addEventListener("load", function() {
+        loader.style.display = "none";
+      })
+    </script>
   </body>
 </html>
