--- a/static/style.css
+++ b/static/style.css
@@ -19,7 +19,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   font-family: "Montserrat-regular";
@@ -152,9 +153,9 @@ html, body {
   opacity: 0;
 }
 
-.en-contact:hover ~ .cn-contact,
-.en-about:hover ~ .cn-about,
-.en-perform:hover ~ .cn-perform {
+.en-contact:hover~.cn-contact,
+.en-about:hover~.cn-about,
+.en-perform:hover~.cn-perform {
   opacity: 1;
   transform: translateY(0);
 }
@@ -258,12 +259,12 @@ hr {
 }
 
 .pdf a {
-  color:rgb(105, 1, 1);
+  color: rgb(105, 1, 1);
   text-decoration: none;
 }
 
 .pdf a:hover {
-  color:white;
+  color: white;
   transition-duration: 0.4s;
 }
 
@@ -321,7 +322,8 @@ form label {
   vertical-align: top;
 }
 
-form .input, form textarea {
+form .input,
+form textarea {
   width: 100%;
   border: none;
   outline: none;
@@ -377,38 +379,146 @@ form textarea {
 }
 
 @media (max-width: 480px) {
-  .main-page {width: 100%; height: 100%;}
-  .en-title {font-size: 3em;}
-  .en-contact {top: 49.5%; left: -21%;}
-  .en-about {top: 49.5%; left: 7.5%;}
-  .en-perform {top: 38%; left: 26%;}
-  .cn {font-size: 3em;}
-  .cn-contact {top: 37%; left: 11%;opacity: 0.1; color: black;}
-  .cn-about {top: 39%; left: 26%; opacity: 0.1; color: black;}
-  .cn-perform {top: 48%; left: 31%; opacity: 0.1; color: black;}
+  .main-page {
+    width: 100%;
+    height: 100%;
+  }
 
-  .title-perform, .title-about, .title-contact {font-size: 2em;}
-  .title-perform {width:100%;}
-  .list-program {width: 95%;}
-  .program-year {font-size: 1em; margin-right: 10%;}
-  .cn-title {font-size: 1.1em;}
-  .img {background: hidden;}
-  .content {font-size:1em;}
-  .form {width: 95%; padding-right: 20px;}
+  .en-title {
+    font-size: 3em;
+  }
+
+  .en-contact {
+    top: 49.5%;
+    left: -21%;
+  }
+
+  .en-about {
+    top: 49.5%;
+    left: 7.5%;
+  }
+
+  .en-perform {
+    top: 38%;
+    left: 26%;
+  }
+
+  .cn {
+    font-size: 3em;
+  }
+
+  .cn-contact {
+    top: 37%;
+    left: 11%;
+    opacity: 0.1;
+    color: black;
+  }
+
+  .cn-about {
+    top: 39%;
+    left: 26%;
+    opacity: 0.1;
+    color: black;
+  }
+
+  .cn-perform {
+    top: 48%;
+    left: 31%;
+    opacity: 0.1;
+    color: black;
+  }
+
+  .title-perform,
+  .title-about,
+  .title-contact {
+    font-size: 2em;
+  }
+
+  .title-perform {
+    width: 100%;
+  }
+
+  .list-program {
+    width: 95%;
+  }
+
+  .program-year {
+    font-size: 1em;
+    margin-right: 10%;
+  }
+
+  .cn-title {
+    font-size: 1.1em;
+  }
+
+  .img {
+    background: hidden;
+  }
+
+  .content {
+    font-size: 1em;
+  }
+
+  .form {
+    width: 95%;
+    padding-right: 20px;
+  }
 }
 
 @media (min-width: 480px) and (max-width: 1080px) {
-  .title-perform, .title-about, .title-contact {font-size: 3em;}
-  .cn-title {font-size: 1em;}
-  .img {background: hidden;}
-  .content {font-size: 14px;}
-  .form {width: 80%; padding-right: 1em;}
-  .cn {font-size: 5em;}
-  .cn-contact {top: 22%; left: 10%;opacity: 0.1; color: black;}
-  .cn-about {top: 27%; left: 24%; opacity: 0.1; color: black;}
-  .cn-perform {top: 48%; left: 27%; opacity: 0.1; color: black;}
+
+  .title-perform,
+  .title-about,
+  .title-contact {
+    font-size: 3em;
+  }
+
+  .cn-title {
+    font-size: 1em;
+  }
+
+  .img {
+    background: hidden;
+  }
+
+  .content {
+    font-size: 14px;
+  }
+
+  .form {
+    width: 80%;
+    padding-right: 1em;
+  }
+
+  .cn {
+    font-size: 5em;
+  }
+
+  .cn-contact {
+    top: 22%;
+    left: 10%;
+    opacity: 0.1;
+    color: black;
+  }
+
+  .cn-about {
+    top: 27%;
+    left: 24%;
+    opacity: 0.1;
+    color: black;
+  }
+
+  .cn-perform {
+    top: 48%;
+    left: 27%;
+    opacity: 0.1;
+    color: black;
+  }
 }
 
 @media (min-width: 1600px) {
-  .img {width: 50%; height: 50%;}
+  .img {
+    width: 50%;
+    height: 50%;
+  }
 }
